# garmin-grafana

./: .gitignore  AGENTS.md  Dockerfile  README.md  compose-example.yml  easy-install.sh  kubernetes-spec-example.yaml  pyproject.toml
.github/workflows/: prod.push.yml  version.release.yml
Grafana_Dashboard/: Garmin-Grafana-Dashboard.json  Garmin-Grafana-Dashboard.yaml  Garmin-Grafana-GPS-Dashboard.json
Grafana_Datasource/: influxdb.yaml
docs/: manual-import-instructions.md
k8s/: README.md  values.yaml
k8s/templates/: garmin-deployment.yaml
src/garmin_grafana/: garmin_bulk_importer.py  garmin_fetch.py  influxdb_exporter.py
tests/: compose.yml
tests/questdb_strength_cleanup/: questdb_strength_cleanup_test.py  run.sh
